# performance-lab

./: README.md  author.txt  pyproject.toml
task1/: task1.py
task2/: dot.txt  task2.py
task3/: task3.py
task4/: task4.py
tests/: test_task1.py  test_task2.py  test_task3.py  test_task4.py
tests/task2_cases/2/: circle.txt  dot.txt
tests/task2_cases/3/: dot.txt
tests/task2_cases/4/: circle.txt  dot.txt
tests/task3_cases/2/: report.json  tests.json  values.json
tests/task3_cases/3/: report.json  tests.json  values.json
tests/task4_cases/3/: numbers.txt
